Feat :: 해커톤 저장할때 중복 값 체크 로직
원래는 properties 디비 create 였는데 그거 말고 update로 바꾸면서
값 저장할때 중복 값 제거하고 20개만 clint에 보내주도록 로직 추가함